# gimmie

./: AUTHORS  BUILDING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.in
data/: GNOME_GimmieApplet.server.in.in  GNOME_GimmieApplet.xml  Makefile.am  Makefile.in  gimmie.schemas.in
data/images/: Makefile.am  Makefile.in
gimmie/: Makefile.am  Makefile.in  __init__.py  gimmie.in  gimmie.py  gimmie_applet.py  gimmie_applications.py  gimmie_bar.py  gimmie_base.py  gimmie_computer.py  gimmie_file.py  gimmie_gaim.py  gimmie_globals.py  gimmie_globals.py.in  gimmie_gui.py  gimmie_library.py  gimmie_logout.py  gimmie_people.py  gimmie_pidgin.py  gimmie_prefs.py  gimmie_recent.py  gimmie_running.py  gimmie_threads.py  gimmie_tomboy.py  gimmie_topicwin.py  gimmie_trash.py  gimmie_util.py
gimmie/gdmclient/: Makefile.am  Makefile.in
gimmie/gmenu/: Makefile.am  Makefile.in  __init__.py
gimmie/gnomecups/: Makefile.am  Makefile.in  __init__.py  _gnomecups.defs  _gnomecups.override  _gnomecupsmodule.c  _gnomecupstypebuiltins.c  _gnomecupstypebuiltins.h
gimmie/iconentry/: Makefile.am  Makefile.in  ephy-icon-entry.c  ephy-icon-entry.h
gimmie/sexy/: Makefile.am  Makefile.in  __init__.py  gen-defs.sh  sexy.defs  sexy.override  sexymodule.c
gimmie/sexy/libsexy/: sexy-enum-types.c  sexy-enum-types.h  sexy-tooltip.c
gimmie/traymanager/: Makefile.am  Makefile.in  __init__.py  _egg.defs  _egg.override  _eggmodule.c
po/: ChangeLog  POTFILES.in  POTFILES.skip  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  gl.po  hu.po  ja.po  lv.po  mk.po  nb.po  oc.po  pt_BR.po  ru.po  sv.po  vi.po  zh_CN.po
