
SUBDIRS = data gimmie po


DISTCLEANFILES =                \
        intltool-extract        \
        intltool-merge          \
        intltool-update


EXTRA_DIST =  			\
	BUILDING		\
        intltool-extract.in     \
        intltool-merge.in       \
        intltool-update.in


DISTCHECK_CONFIGURE_FLAGS = --disable-schemas-install
